--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: "Calwyn's Portfolio"
+description: My Portfolio
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
